# librpm.rs

./: .dockerignore  .gitignore  .travis.yml  CHANGES.md  Cargo.toml  Dockerfile  My.Dockerfile  README.md
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
ci/: Dockerfile.centos8  Dockerfile.fedora  ci-checks.sh
librpm-sys/: Cargo.toml  README.md  build.rs
librpm-sys/include/: librpm.hpp
librpm-sys/src/: lib.rs
librpmbuild-sys/: Cargo.toml  README.md  build.rs
librpmbuild-sys/include/: librpmbuild.hpp
librpmbuild-sys/src/: lib.rs
librpmsign-sys/: Cargo.toml  README.md  build.rs
librpmsign-sys/include/: librpmsign.hpp
librpmsign-sys/src/: lib.rs
src/: config.rs  db.rs  error.rs  internal.rs  lib.rs  license.rs  macro_context.rs  package.rs  transaction.rs  version.rs
src/internal/: archive.rs  callback.rs  global_state.rs  header.rs  iterator.rs  problem.rs  tag.rs  td.rs  te.rs  ts.rs  txn.rs
testdata/: README.md
testdata/centos7/: Basenames  Dirnames  Group  Installtid  Name  Obsoletename  Requirename  Sha1header  Sigmd5  Triggername  __db.001  __db.003
tests/: integration.rs  new_api.rs  new_api_double_open.rs  new_api_find.rs  new_api_find_multiple.rs  new_api_find_multiple_threads.rs  new_api_open_with.rs  test-centos7.rs  test-current-system.rs
tests/assets/: README.md
tests/assets/centos7/: Conflictname  Providename  __db.002
tests/common/: mod.rs
