[package]
name          = "librpm"
version       = "0.1.1"
description   = "RPM Package Manager library binding with an idiomatic Rust API"
license       = "LGPL-2.1+"
authors       = ["Tony Arcieri <tony@iqlusion.io>"]
categories    = ["api-bindings", "os", "parsing"]
keywords      = ["rpm", "linux", "redhat", "fedora", "centos"]
readme        = "README.md"
homepage      = "https://github.com/rpm-software-management/librpm.rs/"
documentation = "https://rustrpm.org/librpm/"
edition       = "2018"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
once_cell = "1.8.0"
librpm-sys = { version = "0.1", path = "librpm-sys" }
streaming-iterator = "0.1.5"

[features]
librpm-4-14 = []

default = ["librpm-4-14"]

[workspace]
members = [
    "librpm-sys",
    "librpmbuild-sys",
    "librpmsign-sys"
]
