[package]
name = "librpm"
version = "0.2.0-pre"
description = "RPM Package Manager library binding with an idiomatic Rust API"
license = "MPL-2.0"
authors = ["Tony Arcieri <tony@iqlusion.io>"]
categories = ["api-bindings", "os", "parsing"]
keywords = ["rpm", "linux", "redhat", "fedora", "centos"]
readme = "README.md"
homepage = "https://github.com/rpm-software-management/librpm.rs/"
documentation = "https://rustrpm.org/librpm/"
edition = "2021"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
once_cell = "1.8.0"
librpm-sys = { version = "0.2.0-pre", path = "librpm-sys" }
streaming-iterator = "0.1.5"

[features]
librpm-4-14 = []

default = ["librpm-4-14"]

[workspace]
members = ["librpm-sys", "librpmbuild-sys", "librpmsign-sys"]
