[package]
name          = "librpm-sys"
description   = "RPM Package Manager library FFI bindings (librpm.so)"
version       = "0.1.1"
license       = "LGPL-2.1+"
authors       = ["Tony Arcieri <tony@iqlusion.io>"]
categories    = ["external-ffi-bindings", "os"]
keywords      = ["rpm", "linux", "redhat", "fedora", "centos"]
readme        = "README.md"
homepage      = "https://github.com/RustRPM/librpm.rs/"
repository    = "https://github.com/rustrpm/librpm.rs/tree/master/librpm-sys"
documentation = "https://rustrpm.org/librpm_sys/"

[badges]
travis-ci = { repository = "RustRPM/librpm.rs" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
bindgen = "0.35"

