[package]
name          = "librpm-sys"
description   = "RPM Package Manager library FFI bindings (librpm.so)"
version       = "0.1.1"
license       = "MPL-2.0"
authors       = ["Tony Arcieri <tony@iqlusion.io>"]
categories    = ["external-ffi-bindings", "os"]
keywords      = ["rpm", "linux", "redhat", "fedora", "centos"]
readme        = "README.md"
homepage      = "https://github.com/rpm-software-management/librpm.rs/"
repository    = "https://github.com/rpm-software-management/librpm.rs/tree/master/librpm-sys"
documentation = "https://rustrpm.org/librpm_sys/"
edition       = "2018"

[badges]
travis-ci = { repository = "rpm-software-management/librpm.rs" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
bindgen = "0.59.1"

