[package]
name          = "librpmsign-sys"
description   = "rpmsign library FFI bindings (librpmsign.so)"
version       = "0.1.1"
license       = "LGPL-2.1+"
authors       = ["Tony Arcieri <tony@iqlusion.io>"]
categories    = ["external-ffi-bindings", "os"]
keywords      = ["rpm", "linux", "redhat", "fedora", "centos"]
readme        = "README.md"
homepage      = "https://github.com/RustRPM/librpm.rs/"
repository    = "https://github.com/RustRPM/librpm.rs/tree/master/librpmsign-sys"
documentation = "https://rustrpm.org/librpmsign_sys/"

[badges]
travis-ci = { repository = "RustRPM/librpm.rs" }
maintenance = { status = "passively-maintained" }

[build-dependencies]
bindgen = "0.35"

